<resources>
    <string name="app_name">Pflanzenbestimmung</string>
    <string name="begrüßung">Hallo Pflanzenliebhaber</string>
    <string name="userName">Nutzername</string>
    <string name="userPassword">Passwort</string>
    <string name="Login">Anmelden</string>
    <string name="actuallQuiz">Gesetztes Quiz starten</string>
    <string name="ownQuiz">Zufälliges Quiz starten</string>
    <string name="statistic">Statistik</string>
    <string name="Logout">Abmelden</string>
    <string name="back">Zurück</string>
    <string name="mostErrors">Pflanze mit den meisten Fehlern:</string>
    <string name="errorRate">Fehlerquote:</string>
    <string name="averageTime">Durchschnitlliche Zeit:</string>
    <string name="next">Nächste Pflanze</string>
    <string name="totalTime">Gesammt gebrauchte Zeit:</string>
    <string name="backToMenu">Zurück zum Menü</string>
    <string name="jumpToStatistic">Weiter zur Statistik</string>
    <string name="oneMinTimer">1 Minute pro Pflanze</string>
    <string name="backToStatisticList">Statistikliste öffnen</string>
    <string name="picture">Bild</string>
    <string name="qwest">Fragen</string>
    <string name="nextQuestion">Nächste Pflanze</string>
    <string name="breaks">Pause</string>
    <string name="evaluation">Zur Auswertung</string>


    <string name="quizDateLabel">Quiz vom:</string>
    <string name="quizFehlerQuoteLabel">Fehlerquote:</string>
    <string name="quizTimeLabel">Benötigte Zeit:</string>

    <string name="auswertungAntwort">Angegeben:</string>
    <string name="auswertungLoesung">Lösung:</string>
</resources>