<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".quizPicture">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/plantPicture_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <Button
            android:id="@+id/btn_breakOnPicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:clickable="false"
            android:text="@string/breaks"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_pictureToNextQuestion"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_picToQwest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="32dp"
            android:text="@string/qwest"
            app:layout_constraintBottom_toBottomOf="@+id/btn_pictureToNextQuestion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_pictureToNextQuestion"
            app:layout_constraintTop_toTopOf="@+id/btn_pictureToNextQuestion" />

        <Button
            android:id="@+id/btn_pictureToNextQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/nextQuestion"
            app:layout_constraintBottom_toBottomOf="@+id/btn_breakOnPicture"
            app:layout_constraintEnd_toStartOf="@+id/btn_picToQwest"
            app:layout_constraintStart_toEndOf="@+id/btn_breakOnPicture"
            app:layout_constraintTop_toTopOf="@+id/btn_breakOnPicture" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>