<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".statistic">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fewestErrors_lbl" />

        <TextView
            android:id="@+id/errorRate_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/errorRate"
            app:layout_constraintBottom_toTopOf="@+id/averageTime_lbl"
            app:layout_constraintEnd_toStartOf="@+id/errorRateText_lbl"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/averageTime_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/averageTime"
            app:layout_constraintBottom_toTopOf="@+id/fewestErrors_lbl"
            app:layout_constraintEnd_toStartOf="@+id/averageTimeText_lbl"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/errorRate_lbl" />

        <TextView
            android:id="@+id/fewestErrors_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/fewestErrors"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toStartOf="@+id/fewestErrorsText_lbl"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/averageTime_lbl" />

        <TextView
            android:id="@+id/errorRateText_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:text="TextView"
            app:layout_constraintBottom_toTopOf="@+id/averageTimeText_lbl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.79"
            app:layout_constraintStart_toEndOf="@+id/errorRate_lbl"
            app:layout_constraintTop_toTopOf="@+id/errorRate_lbl"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/averageTimeText_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="TextView"
            app:layout_constraintBottom_toTopOf="@+id/fewestErrorsText_lbl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.72"
            app:layout_constraintStart_toEndOf="@+id/averageTime_lbl"
            app:layout_constraintTop_toTopOf="@+id/averageTime_lbl"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/fewestErrorsText_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:text="TextView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/fewestErrors_lbl"
            app:layout_constraintTop_toTopOf="@+id/fewestErrors_lbl"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>